--- a/angular/angular-template/src/app/app.component.html
+++ b/angular/angular-template/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header *ngIf="!isLogin"></app-header>
 <!--<app-header></app-header>-->
-<router-outlet></router-outlet>
+<router-outlet ></router-outlet>
+<app-footer *ngIf="!isLogin"></app-footer>
