--- a/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
+++ b/angular/angular-template/src/app/entities/entities-list/entities-list.component.html
@@ -34,11 +34,11 @@
 <!--    </div>-->
 <!--  </div>-->
 <!--</nav>-->
-<div class="container-fluid" id="content">
+<div class="container-fluid" id="content" style="margin-top: 58px">
   <div class="row">
     <div class="col-lg-2 ml-0">
       <!-- Sidebar -->
-      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; height: 1000px;">
+      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 235px; height: 1000px;">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
           <span class="fs-4"><strong>Quản lý hệ thống</strong></span>
@@ -70,7 +70,7 @@
         <div class="card-header py-3">
           <div class="d-flex flex-row  d-flex justify-content-center">
             <div class="col-6">
-              <div class="input-group">
+              <div class="input-group" style="padding-left: 120px">
                 <!--                <div class="form-outline">-->
                 <!--                  <input id="search-focus" type="search" id="form1" class="form-control" placeholder="Nhập mã cá thể" />-->
 
@@ -78,8 +78,14 @@
                 <!--                <button type="button" class="btn btn-primary">-->
                 <!--                  Tìm kiếm-->
                 <!--                </button>-->
-                <div class="form-outline">
-                  <input type="date" class="form-control" [(ngModel)]="inDate"
+                <p style="    margin-top: 5px;">Khoảng ngày vào chuồng từ  </p>
+                <div class="form-outline" style="    margin-left: 10px;    margin-right: 10px;">
+                  <input type="date" class="form-control" [(ngModel)]="inDateMin"
+                         placeholder="Nhập ngày vào" />
+                </div>
+                <p style="    margin-top: 5px;">đến</p>
+                <div class="form-outline" style=" margin-left: 10px;">
+                  <input type="date" class="form-control" [(ngModel)]="inDateMax"
                          placeholder="Nhập ngày vào" />
                 </div>
                 <div class="form-outline"style="margin-left: 10px;" >
@@ -202,62 +208,5 @@
     </div>
   </div>
 </div>
-<footer class="">
-  <div class="container py-5">
-    <div class="row py-4">
-      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="" alt="" width="180" class="mb-3">
-        <p class="font-italic text-muted">Kết nối với chúng tôi.</p>
-        <ul class="list-inline mt-4">
-          <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i
-            class="fa fa-twitter i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i
-            class="fa fa-facebook i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i
-            class="fa fa-instagram i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i
-            class="fa fa-pinterest i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i
-            class="fa fa-vimeo i-footer"></i></a></li>
-        </ul>
-      </div>
-      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-        <h6 class="text-uppercase font-weight-bold mb-4">Sản phẩm</h6>
-        <ul class="list-unstyled mb-0">
-          <li class="mb-2"><a href="#" class="text-muted">Thức Ăn</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Thuốc</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Giống</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Cá Thể</a></li>
-        </ul>
-      </div>
-      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-        <h6 class="text-uppercase font-weight-bold mb-4">Hệ thống</h6>
-        <ul class="list-unstyled mb-0">
-          <li class="mb-2"><a href="#" class="text-muted">Đăng nhập</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Đăn ký</a></li>
-        </ul>
-      </div>
-      <div class="col-lg-4 col-md-6 mb-lg-0">
-        <h6 class="text-uppercase font-weight-bold mb-4">Gửi ý kiến</h6>
-        <p class="text-muted mb-4">Mọi thắc mắc xin liên hệ cho chúng tôi.</p>
-        <div class="p-1 rounded border">
-          <div class="input-group">
-            <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1"
-                   class="form-control border-0 shadow-0">
-            <div class="input-group-append">
-              <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Copyrights -->
-  <div class="bg-light py-4">
-    <div class="container text-center">
-      <p class="text-muted mb-0 py-2">© 2019 Bootstrapious All rights reserved.</p>
-    </div>
-  </div>
-</footer>
 
 
