push source mới

--- a/angular/angular-template/src/app/component/contact/contact.component.html
+++ b/angular/angular-template/src/app/component/contact/contact.component.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h1>Elegant Contact Form.</h1>
+<h1>A04 logo in here.</h1>
 <div class="info"><a href="https://www.grandvincent-marion.fr" target="_blank"><p> From A0421I1 <i class="fa fa-heart"></i> with love </p></a></div>
 
 <form>
@@ -8,8 +8,6 @@
 
   <div class="contentform">
     <div id="sendmessage"> Your message has been sent successfully. Thank you. </div>
-
-
     <div class="leftcontact">
       <div class="form-group">
         <p>Tên của bạn:  <span>*</span></p>
@@ -27,7 +25,6 @@
     </div>
 
     <div class="rightcontact">
-
       <div class="form-group">
         <p>Địa chỉ <span>*</span></p>
         <span class="icon-case"><i class="fa fa-building-o"></i></span>
@@ -50,9 +47,6 @@
     </div>
   </div>
   <button type="submit" class="bouton-contact">Gửi</button>
-
 </form>
-
-
 </body>
 </html>
