--- a/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
+++ b/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid" id="content">
+<div class="container-fluid" id="content" style="margin-top: 58px">
   <div class="row">
     <div class="col-lg-2 ml-0">
       <!-- Sidebar -->
@@ -50,13 +50,13 @@
           </div>
         </div>
 
-<!--        <div *ngIf="isSubmitted then submited else notSubmited"></div>-->
-<!--        <ng-template #notSubmited>-->
-<!--          <h3>Không có kết quả nào để hiển thị</h3>-->
-<!--        </ng-template>-->
-<!--        <ng-template #submited>-->
-<!--          <h1>Tìm ra kết quả</h1>-->
-<!--        </ng-template>-->
+        <!--        <div *ngIf="isSubmitted then submited else notSubmited"></div>-->
+        <!--        <ng-template #notSubmited>-->
+        <!--          <h3>Không có kết quả nào để hiển thị</h3>-->
+        <!--        </ng-template>-->
+        <!--        <ng-template #submited>-->
+        <!--          <h1>Tìm ra kết quả</h1>-->
+        <!--        </ng-template>-->
 
         <div *ngIf="isTrue">
           <div *ngIf="isSubmitted then submited else notSubmited"></div>
@@ -75,7 +75,7 @@
               <tr>
                 <th>Mã nhân viên</th>
                 <th>Họ và tên</th>
-<!--                <th>Tên tài khoản</th>-->
+                <!--                <th>Tên tài khoản</th>-->
                 <th>Email</th>
                 <th>Ngày sinh</th>
                 <th>Giới tính</th>
@@ -100,10 +100,10 @@
                 <td>{{employee.address}}</td>
                 <td hidden>{{employee.isDelete}}</td>
                 <td>
-                  <button class="btn"(click)="updateEmployee(employee)"><i class="fa-solid fa-pen-clip" style="color: blue;"></i></button>
+                  <button class="btn"(click)="updateEmployee(employee)"><i class="fa-solid fa-pen-clip" style="color: blue;padding-left: 25px"></i></button>
                 </td>
                 <td>
-                  <i class="fa-solid fa-trash-can" style="color: red;"></i>
+                  <i class="fa-solid fa-trash-can" style="color: red;padding-left: 25px"></i>
                 </td>
               </tr>
 
@@ -147,55 +147,4 @@
     </div>
   </div>
 </div>
-<footer class="">
-  <div class="container py-5">
-    <div class="row py-4">
-      <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
-        <p class="font-italic text-muted">Kết nối với chúng tôi.</p>
-        <ul class="list-inline mt-4">
-          <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i class="fa fa-twitter i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i class="fa fa-facebook i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i class="fa fa-instagram i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i class="fa fa-pinterest i-footer"></i></a></li>
-          <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fa fa-vimeo i-footer"></i></a></li>
-        </ul>
-      </div>
-      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-        <h6 class="text-uppercase font-weight-bold mb-4">Sản phẩm</h6>
-        <ul class="list-unstyled mb-0">
-          <li class="mb-2"><a href="#" class="text-muted">Thức Ăn</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Thuốc</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Giống</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Cá Thể</a></li>
-        </ul>
-      </div>
-      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-        <h6 class="text-uppercase font-weight-bold mb-4">Hệ thống</h6>
-        <ul class="list-unstyled mb-0">
-          <li class="mb-2"><a href="#" class="text-muted">Đăng nhập</a></li>
-          <li class="mb-2"><a href="#" class="text-muted">Đăn ký</a></li>
-        </ul>
-      </div>
-      <div class="col-lg-4 col-md-6 mb-lg-0">
-        <h6 class="text-uppercase font-weight-bold mb-4">Gửi ý kiến</h6>
-        <p class="text-muted mb-4">Mọi thắc mắc xin liên hệ cho chúng tôi.</p>
-        <div class="p-1 rounded border">
-          <div class="input-group">
-            <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">
-            <div class="input-group-append">
-              <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Copyrights -->
-  <div class="bg-light py-4">
-    <div class="container text-center">
-      <p class="text-muted mb-0 py-2">© 2019 Bootstrapious All rights reserved.</p>
-    </div>
-  </div>
-</footer>
 
