--- a/angular/angular-template/src/app/component/header/header.component.html
+++ b/angular/angular-template/src/app/component/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top bg-light">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">BREEDER </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link text-uppercase" href="#">Trang chủ <span
+          <a class="nav-link text-uppercase"  href="">Trang chủ <span
             class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
