--- a/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
+++ b/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
@@ -103,7 +103,7 @@
                   <button class="btn"(click)="updateEmployee(employee)"><i class="fa-solid fa-pen-clip" style="color: blue;padding-left: 25px"></i></button>
                 </td>
                 <td>
-                  <i class="fa-solid fa-trash-can" style="color: red;padding-left: 25px"></i>
+                  <button class="btn" (click)="openDialog(employee.employeeId)"><i class="fa-solid fa-trash-can" style="color: red;padding-left: 25px" ></i></button>
                 </td>
               </tr>
 
