--- a/angular/angular-template/src/app/new/new-list/new-list.component.css
+++ b/angular/angular-template/src/app/new/new-list/new-list.component.css
@@ -141,8 +141,14 @@ height: 50px; */
 }
 #new-name-left{
   font-size: 20px;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
   /* font-family: 'Libre Bodoni', serif;
 font-family: 'News Cycle', sans-serif; */
+}
+#new-name-left:hover{
+  color: #54b3d6;
 }
 .btn:focus {
   outline: none;
@@ -328,6 +334,7 @@ font-family: 'News Cycle', sans-serif; */
 
   border-radius: 50% 50% 0 0 ;
 }
+
 .img-carosel-2{
   height:300px;
   object-fit:cover;
