--- a/angular/angular-template/src/app/component/contact/contact.component.html
+++ b/angular/angular-template/src/app/component/contact/contact.component.html
@@ -56,6 +56,8 @@
       <div class="validation"></div>
     </div>
   </div>
+
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3833.7518903498244!2d108.20754761465163!3d16.07835978887529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31421846431fd0fd%3A0x780138ba60fa3aa6!2zMjk1IE5ndXnhu4VuIFThuqV0IFRow6BuaCwgVGhhbmggQsOsbmgsIEjhuqNpIENow6J1LCDEkMOgIE7hurVuZyA1NTAwMDAsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1652275597807!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   <button type="submit" class="bouton-contact">Gửi</button>
 </form>
 </body>
