--- a/angular/angular-template/src/app/component/error404/error404.component.css
+++ b/angular/angular-template/src/app/component/error404/error404.component.css
@@ -1,4 +1,4 @@
-*
+/***/
 {
   margin: 0;
   padding: 0;
@@ -7,28 +7,28 @@
   font-family: sans-serif;
 }
 
-body
-{
-  height: 100%;
-  background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.75)),url(https://wallpapercave.com/wp/wp3378366.jpg);
-  background-position: center;
-  background-size: cover;
-}
+/*body*/
+/*{*/
+/*  height: 100%;*/
+/*  background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.75)),url(https://wallpapercave.com/wp/wp3378366.jpg);*/
+/*  background-position: center;*/
+/*  background-size: cover;*/
+/*}*/
 
-#error-frame
-{
-  position: absolute;
-  top: 5%;
-  left: 10%;
-  right: 10%;
-  bottom: 5%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #fff;
-  box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
-  border: 2px solid #2DBDE8;
-}
+/*#error-frame*/
+/*{*/
+/*  position: absolute;*/
+/*  top: 5%;*/
+/*  left: 10%;*/
+/*  right: 10%;*/
+/*  bottom: 5%;*/
+/*  display: flex;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*  background: #fff;*/
+/*  box-shadow: 0px 5px 10px rgba(0,0,0,0.1);*/
+/*  border: 2px solid #2DBDE8;*/
+/*}*/
 
 #error-frame .container
 {
@@ -44,28 +44,28 @@ body
   text-shadow: 0 0 5px #2DBDE8, 0 0 5px #2DBDE8;
 }
 
-.container h4
-{
-  font-size: 1.8em;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  color: #000;
-  font-size: 2.1em;
-  max-width: 600px;
-  position: relative;
-}
+/*.container h4*/
+/*{*/
+/*  font-size: 1.8em;*/
+/*  margin-bottom: 20px;*/
+/*  text-transform: uppercase;*/
+/*  color: #000;*/
+/*  font-size: 2.1em;*/
+/*  max-width: 600px;*/
+/*  position: relative;*/
+/*}*/
 
-.container p
-{
-  font-size: 1.2em;
-  color: #0d0d0d;
-}
+/*.container p*/
+/*{*/
+/*  font-size: 1.2em;*/
+/*  color: #0d0d0d;*/
+/*}*/
 
-.container .btn
-{
-  margin: 25px 0;
-  display: inline-flex;
-}
+/*.container .btn*/
+/*{*/
+/*  margin: 25px 0;*/
+/*  display: inline-flex;*/
+/*}*/
 
 .container .btn a
 {
@@ -85,4 +85,8 @@ body
 {
   background: #2DBDE8;
   color: #fff;
+}
+.parent{
+  margin-top: 200px;
+  min-height: 100vh;
 }
