--- a/angular/angular-template/src/app/component/error404/error404.component.html
+++ b/angular/angular-template/src/app/component/error404/error404.component.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <div id="error-frame">
-  <div class="container">
+  <div class="container parent">
     <h1>404</h1>
     <h4>Opps! Page not found</h4>
     <p>Soory, the page you're looling for doesn't exist. you can go to home page.</p>
     <div class="btn">
-      <a href="/entities">Return home</a>
+      <a href="/">Return home</a>
     </div>
   </div>
 </div>
