--- a/angular/angular-template/src/app/cage/cage-list/cage-list.component.html
+++ b/angular/angular-template/src/app/cage/cage-list/cage-list.component.html
@@ -1,5 +1,5 @@
 
-<div class="container-fluid" id="content" style="margin-top: 40px">
+<div class="container-fluid " id="content" style="margin-top: 40px">
   <div class="row">
     <div class="col-lg-2 ml-0">
       <!-- Sidebar -->
@@ -36,21 +36,24 @@
           <div class="d-flex flex-row  d-flex justify-content-center">
             <div class="col-6">
               <div class="input-group" style="padding-left: 120px">
-                <p style="    margin-top: 5px;">Khoảng ngày vào chuồng từ  </p>
-                <div class="form-outline" style="    margin-left: 10px;  margin-right: 10px;">
-                  <input type="date" class="form-control"
-                         placeholder="Nhập ngày vào" />
+                <p style="    margin-top: 5px;margin-right: 10px">Loại ngày:</p>
+                <select class="form-control" style="max-width: 125px" [(ngModel)]="dateType">
+                  <option value="createdDate">Ngày tạo</option>
+                  <option value="closedDate">Ngày đóng</option>
+                </select>
+                <p style="  margin-top: 5px;margin-left: 8px">Từ</p>
+                <div class="form-outline" style=" margin-left: 10px;  margin-right: 10px;">
+                  <input type="date" class="form-control" placeholder="Nhập ngày vào" [(ngModel)]="dateFrom"/>
                 </div>
-                <p style="    margin-top: 5px;">đến</p>
+                <p style="  margin-top: 5px;">đến</p>
                 <div class="form-outline" style=" margin-left: 10px;">
-                  <input type="date" class="form-control"
-                         placeholder="Nhập ngày vào" />
+                  <input type="date" class="form-control" placeholder="Nhập ngày vào" [(ngModel)]="dateTo"/>
                 </div>
                 <div class="form-outline"style="margin-left: 10px;" >
                   <input type="search" class="form-control"
-                         placeholder="Nhập mã chuồng nuôi"/>
+                         placeholder="Nhập mã chuồng nuôi" [(ngModel)]="searchCageId"/>
                 </div>
-                <button type="submit" class="btn btn-primary" style="margin-left: 10px;">
+                <button type="submit" (click)="search()" class="btn btn-primary" style="margin-left: 10px;">
                   Tìm kiếm
                 </button>
               </div>
@@ -73,48 +76,28 @@
               <thead>
               <tr>
                 <th>Mã chuồng nuôi</th>
-                <th>Ngày nhân viên</th>
+                <th>Tên nhân viên</th>
+                <th>Số lượng</th>
                 <th>Ngày tạo chuồng</th>
                 <th>Ngày đóng chuồng</th>
-                <th>Số lượng cá thể</th>
                 <th>Sửa</th>
+                <th>Chi tiết cá thể</th>
               </tr>
               </thead>
 
               <tbody>
-              <tr >
-                <td>C001</td>
-                <td>NV002</td>
-                <td>12/10/2020</td>
-                <td>15/09/2021</td>
-                <td>10/15</td>
+              <tr *ngFor="let cage of listCage">
+                <td>{{cage.cageId}}</td>
+                <td>{{cage.employeeName}}</td>
+                <td>{{cage.entitiesQuantity}}/{{cage.quantity}}</td>
+                <td>{{cage.createdDate}}</td>
+                <td>{{cage.closedDate}}</td>
                 <td>
-
-                  <button class="btn"><i class="fa-solid fa-pen-clip"
-                                                                                      style="color: blue;"></i></button>
+                  <button class="btn"><i class="fa-solid fa-pen-clip" style="color: blue;"></i></button>
                 </td>
-                <!--                <td>-->
-                <!--                  -->
-                <!--                  <i class="fa-solid fa-trash-can" style="color: red;"></i>-->
-                <!--                </td>-->
-                <!--                [routerLink]="['delete/'+entity.entitiesId]"-->
-              </tr>
-              <tr >
-                <td>C001</td>
-                <td>NV002</td>
-                <td>12/10/2020</td>
-                <td>15/09/2021</td>
-                <td>10/15</td>
                 <td>
-
-                  <button class="btn"><i class="fa-solid fa-pen-clip"
-                                         style="color: blue;"></i></button>
+                  <button class="btn" (click)="getListEntitiesByCage(cage.cageId)"><i class="fa-solid fa-eye" style="color: blue;"></i></button>
                 </td>
-                <!--                <td>-->
-                <!--                  -->
-                <!--                  <i class="fa-solid fa-trash-can" style="color: red;"></i>-->
-                <!--                </td>-->
-                <!--                [routerLink]="['delete/'+entity.entitiesId]"-->
               </tr>
               </tbody>
             </table>
@@ -126,43 +109,39 @@
                 <button class="btn btn-primary">Khởi tạo</button>
               </a>
             </div>
-            <div class="col-sm-12 col-md-7">
-              <div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate">
-
-                <ul class="nav nav-pills">
-                  <!--                  <div>-->
-                  <!--                    <a href="@{'/customers'(page=${customers.number - 1})}" if="${customers.hasPrevious()}">Previous</a>-->
-                  <!--                    <span text="${customers.number + 1}"></span>/<span text="${customers.totalPages}"></span>-->
-                  <!--                    <a href="@{'/customers'(page=${customers.number + 1})}" if="${customers.hasNext()}">Next</a>-->
-                  <!--                  </div>-->
-
+            <div class="col-sm-12 col-md-7" >
+              <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-end" style="justify-content: center" *ngIf="isSearch==false" >
+                  <li class="nav-item">
+                    <a [ngClass]="{'nav-link-lr-true': 0 == page, 'nav-link-lr-false ': 0 != page}" href=""
+                       (click)="setPage(page-1,$event)" ><i class="fa-solid fa-caret-left"></i></a>
+                  </li>
                   <li class="nav-item" *ngFor="let p of pages;let i=index">
-                    <!--                    <a class="nav-link " href="" (click)="setPage(i,$event)">{{i+1}}Trước</a>-->
-                    <a class="nav-link " href="" (click)="setPage(i,$event)">{{i + 1}}</a>
+                    <a [ngClass]="{'nav-link-true': i == page, 'nav-link-false ': i != page}" href=""
+                       (click)="setPage(i,$event)">{{i+1}}</a>
+                  </li>
+                  <li class="nav-item">
+                    <a [ngClass]="{'nav-link-lr-true': pageTotal - 1 == page, 'nav-link-lr-false': pageTotal  - 1 != page}" href=""
+                       (click)="setPage(page+1,$event)" ><i class="fa-solid fa-caret-right"></i></a>
                   </li>
                 </ul>
+<!--                Phan trang khi tim kiem-->
 
-
-                <!--                <ul class="pagination"><li class="paginate_button page-item previous" id="dataTable_previous">-->
-                <!--                  <a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Trước</a>-->
-                <!--                </li>-->
-                <!--                  <li class="paginate_button page-item ">-->
-                <!--                    <a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a>-->
-                <!--                  </li>-->
-                <!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a>-->
-                <!--                  </li>-->
-                <!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a>-->
-                <!--                  </li>-->
-                <!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a>-->
-                <!--                  </li>-->
-                <!--                  <li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a>-->
-                <!--                  </li>-->
-                <!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next">-->
-
-                <!--                    <a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Sau</a>-->
-                <!--                  </li>-->
-                <!--                </ul>-->
-              </div>
+                <ul class="pagination justify-content-end" style="justify-content: center" *ngIf="isSearch==true" >
+                  <li class="nav-item">
+                    <a [ngClass]="{'nav-link-lr-true': 0 == pageSearchCurrent, 'nav-link-lr-false ': 0 != pageSearchCurrent}" href=""
+                       (click)="setSearch(pageSearchCurrent-1,$event)" ><i class="fa-solid fa-caret-left"></i></a>
+                  </li>
+                  <li class="nav-item" *ngFor="let p of pageSearch;let i=index">
+                    <a [ngClass]="{'nav-link-true': i == pageSearchCurrent, 'nav-link-false ': i != pageSearchCurrent}" href=""
+                       (click)="setSearch(i,$event)">{{i+1}}</a>
+                  </li>
+                  <li class="nav-item">
+                    <a [ngClass]="{'nav-link-lr-true': pageSearchTotal - 1 == pageSearchCurrent, 'nav-link-lr-false': pageSearchTotal  - 1 != pageSearchCurrent}" href=""
+                       (click)="setSearch(pageSearchCurrent+1,$event)" ><i class="fa-solid fa-caret-right"></i></a>
+                  </li>
+                </ul>
+              </nav>
             </div>
           </div>
 
